--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "discord-py[speed]>=2.5.2",
+    "pydantic-settings>=2.9.1",
+    "pydantic>=2.11.5",
 ]
