--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiohttp>=3.12.14",
     "discord-py[speed]>=2.5.2",
     "pydantic-settings>=2.9.1",
     "pydantic>=2.11.5",
