--- a/bot.toml.example
+++ b/bot.toml.example
@@ -5,21 +5,22 @@ log_level = "INFO"
 [guild]
 id = <the id of the server here>
 
-[guild.club.1]  # AE
+[guild.clubs.1]  # AE
 president_role_id = <role id>
 member_role_id = <role id>
-[guild.club.29]  # Club Welcome
+[guild.clubs.29]  # Club Welcome
 president_role_id = <role id>
 member_role_id = <role id>
-[guild.club.38]  # Troll Penché
+[guild.clubs.38]  # Troll Penché
 president_role_id = <role id>
 member_role_id = <role id>
-[guild.club.43]  # Reflex
+[guild.clubs.43]  # Reflex
 president_role_id = <role id>
 member_role_id = <role id>
-[guild.club.79]  # Cook'UT
+[guild.clubs.79]  # Cook'UT
 president_role_id = <role id>
 member_role_id = <role id>
 
 [sith_api]
 api_key = "<your sith api token here>"
+url = "https://ae.utbm.fr/"
