--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.13.0",
     "discord-py[speed]>=2.6.4",
+    "peewee>=3.18.2",
     "pydantic-settings>=2.11.0",
     "pydantic>=2.12.0",
     "pytz>=2025.2",
