--- a/bot.toml.example
+++ b/bot.toml.example
@@ -4,6 +4,8 @@ log_level = "INFO"
 
 [guild]
 id = <the id of the server here>
+news_channel_id = <the id of the news channel here>
+news_role_id = <the id of the news channel here>
 
 [sith_api]
 api_key = "<your sith api token here>"
