--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "discord-py[speed]>=2.6.4",
     "pydantic-settings>=2.11.0",
     "pydantic>=2.12.0",
+    "pytz>=2025.2",
 ]
 
 [dependency-groups]
